# rathena

./: CMakeLists.txt  configure  configure.in
.github/workflows/: clang_format.yml
conf/: channels.conf  discord_athena.conf
conf/battle/: monster.conf
db/pre-re/: skill_db.yml
db/re/: skill_db.yml
diffs/: mob_hp_bars.diff
doc/: script_commands.txt
src/char/: char.cpp  char.hpp  char_clif.cpp  char_clif.hpp  char_cnslif.cpp  char_cnslif.hpp  char_logif.cpp  char_logif.hpp  char_mapif.cpp  int_achievement.cpp  int_auction.cpp  int_clan.cpp  int_clan.hpp  int_elemental.cpp  int_guild.cpp  int_guild.hpp  int_homun.cpp  int_homun.hpp  int_mail.cpp  int_mail.hpp  int_mercenary.cpp  int_mercenary.hpp  int_party.c  int_party.cpp  int_party.hpp  int_pet.cpp  int_pet.hpp  int_quest.cpp  int_storage.cpp  inter.cpp  inter.hpp  packets.hpp
src/common/: cbasetypes.hpp  cli.cpp  cli.hpp  conf.cpp  conf.hpp  core.cpp  core.hpp  database.cpp  database.hpp  db.cpp  db.hpp  des.cpp  ers.cpp  ers.hpp  grfio.cpp  malloc.cpp  malloc.hpp  mapindex.cpp  mapindex.hpp  md5calc.cpp  md5calc.hpp  mmo.hpp  msg_conf.cpp  msg_conf.hpp  nullpo.cpp  nullpo.hpp  random.cpp  random.hpp  showmsg.cpp  showmsg.hpp  socket.cpp  socket.hpp  sql.cpp  sql.hpp  strlib.cpp  strlib.hpp  timer.cpp  timer.hpp  utilities.cpp  utilities.hpp  (+4 more)
src/config/: const.hpp  core.hpp  packets.hpp  renewal.hpp  secure.hpp
src/login/: account.cpp  account.hpp  ipban.cpp  login.cpp  login.hpp  loginchrif.cpp  loginchrif.hpp  loginclif.cpp  (+5 more)
test/: CMakeLists.txt
test/common/: CMakeLists.txt  utilities_test.cpp
(+138 files in other folders)
